tests/reference/asr-implicit9-8049dd2.stderr
semantic error: Variable 'f' is not declared
  --> tests/implicit9.f90:21:1
   |
21 | f = 4
   | ^ 'f' is undeclared
